Closed Bug 1342787 Opened 9 years ago Closed 9 years ago

telugu language not readable in firefox // accessibility issue.

Categories

(Core :: Layout: Text and Fonts, defect)

52 Branch
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla54
Tracking Status
relnote-firefox --- -
firefox51 --- unaffected
firefox52 + verified
firefox-esr52 --- fixed
firefox53 + verified
firefox54 --- verified

People

(Reporter: mysticshyam, Assigned: jfkthame)

References

Details

(Keywords: access, regression)

Attachments

(4 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:51.0) Gecko/20100101 Firefox/51.0 Build ID: 20170125094131 Steps to reproduce: I was browsing Facebook using Firefox and faced this issue. Not first time. Actual results: 1) Telugu fonts are not readable on Firefox. Need to open another browser to read. 2) Even if I open also, I couldn't able to read what is there on the Firefox tab as it is in Telugu Language. 3) The website that which I opened has readable Telugu Script as the website admin might have used some related meta tags. Expected results: If I can read the Telugu language without changing the browser that would have been better!
Keywords: access, sec508
Blocks: 643502
Status: UNCONFIRMED → NEW
Component: Untriaged → Layout: Text
Ever confirmed: true
Flags: needinfo?(jfkthame)
Keywords: regression
Product: Firefox → Core
Severity: normal → major
On window, it seems to fix if set font.name.serif.x-telu = Nirmala UI.
or, install Gautami font. Control Panel > All Control Panel Items > Fonts > Download fonts for all languages
Right, the problem arises because the default Telugu font is configured as Gautami, but it's not installed by default on Win10 (perhaps it would be for an Indian localization, but not for en-US, at least). So then font fallback comes into effect, and unfortunately it picks Arial Unicode MS, which supports the characters, but does not have adequate OpenType shaping support. Installing the additional fonts Windows offers (as in comment 3) resolves this, but for users who haven't installed them, the result is broken rendering. This will probably occur for several of the Indic scripts. We can adjust gfxWindowsPlatform::GetCommonFallbackFonts to prefer Nirmala UI for Indic scripts, which should help in such cases.
Flags: needinfo?(jfkthame)
Why it's working in Chrome and other browsers then?
The actual content doesn't specify a font that supports Telugu, so the browser has to pick one somehow from what's available on the system. That could in principle be -any- font that has Telugu characters. The default Firefox font prefs tell us to use Gautami for Telugu, which would work fine, but only if it's installed. Without that, we unfortunately end up using Arial Unicode MS, which has Telugu characters (so it's a reasonable candidate to be chosen by the font fallback process) but lacks the proper shaping information, so it doesn't render well. We can avoid this by explicitly making the fallback code prefer Nirmala UI for Indic scripts. It's possible other browsers are doing something equivalent to that; or it's possible their fallback just "got lucky" for some other reason and happened to choose the font that works.
what to do now?
I have been having this issue for a while now! Basically i don't think the end user will be interested to go to Control Panel > All Control Panel Items > Fonts > Download fonts for all languages to use the particular webpage in Firefox, instead he will just migrate to using chrome. Any thoughts how we can resolve this in future releases(may be?).
Attachment #8841588 - Flags: review?(m_kato) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/ec52c7c8c6f18b8558be0525c14e09c8b26dd74c Bug 1342787 - Use Nirmala UI as fallback font for additional Indic script blocks. r=m_kato
(In reply to Jonathan Kew (:jfkthame) from comment #9) > Created attachment 8841588 [details] [diff] [review] > Use Nirmala UI as fallback font for additional Indic script blocks If it is for a single user then yes we can use Nirmala UI instead, However it is happening for many machines and we are losing many native telugu users for Firefox. Can we expect any quick fix in the near future to solve this?
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
The problem is not resolved. Regional Accessible Firms may **** Firefox on this issue! Elderly Telugu speaking people are NOT using Firefox anymore.
Did you test on a current nightly build? At this point, that's the only place this fix has landed.
Assignee: nobody → jfkthame
Version: 51 Branch → 5 Branch
More than 80 million people on this planet use Telugu on daily basis. Aren't we neglecting the potential population!
A fix for this bug literally landed on our most bleeding edge release today. Software updates don't go out to everybody instantaneously. One thing that would be helpful for getting this fix shipped to those 80 million users sooner would be verifying that the fix in fact works as expected. The build below should contain the fix - can you confirm that it works? https://archive.mozilla.org/pub/firefox/tinderbox-builds/mozilla-central-win64/1488383301/firefox-54.0a1.en-US.win64.zip
Comment on attachment 8841588 [details] [diff] [review] Use Nirmala UI as fallback font for additional Indic script blocks Approval Request Comment [Feature/Bug causing the regression]: harfbuzz update in bug 1325775 (gives poor rendering for complex scripts if font fallback chooses Arial Unicode MS) [User impact if declined]: bad rendering of Telugu script for some users, depending on installed fonts [Is this code covered by automated tests?]: no, too dependent on installed fonts [Has the fix been verified in Nightly?]: not yet, just landed [Needs manual test from QE? If yes, steps to reproduce]: see URL field, and compare "expected" vs "actual result" screenshots [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: just adds a preferred fallback font name [String changes made/needed]: none
Attachment #8841588 - Flags: approval-mozilla-aurora?
Version: 5 Branch → 52 Branch
Per comment 16, would you be able to verify the fix on the build ? That would be helpful to get Firefox better for people speaking Telugu in India. Thanks.
Flags: needinfo?(mysticshyam)
Firefox 52 will ship without the fix, but we can very likely get it into Firefox 53, which will be released in mid-April.
Flags: qe-verify+
Comment on attachment 8841588 [details] [diff] [review] Use Nirmala UI as fallback font for additional Indic script blocks Looks like a simple fix, and it would good to verify it in 53 once this lands.
Attachment #8841588 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
One other thing we could do here is write a page explaining the problem on support.mozilla.org, and link to it from the release notes for 52 as a known issue. Joni, what do you think? Can you explain the workaround on SUMO?
relnote-firefox: --- → ?
Flags: needinfo?(jsavage)
I didn't not get any help from comment 16 link. I installed 'nightly' from a link and checked. I think it's working. We're able to read the Telugu script. Thanks. Please make sure this verision accessible to all. And also check with other languages. Thanks again.
Flags: needinfo?(mysticshyam)
(In reply to Alice0775 White from comment #1) > STR: > https://en.wikipedia.org/wiki/Telugu_language#Grammar > > AR: > see screenshot Hi Alice, What build/OS did you use? I'm not able to reproduce on Fx 52 en-US or Nightly 2017-02-26, Win 10 x64.
Flags: needinfo?(alice0775)
(In reply to Paul Silaghi, QA [:pauly] from comment #24) > (In reply to Alice0775 White from comment #1) > > STR: > > https://en.wikipedia.org/wiki/Telugu_language#Grammar > > > > AR: > > see screenshot > Hi Alice, > What build/OS did you use? I'm not able to reproduce on Fx 52 en-US or > Nightly 2017-02-26, Win 10 x64. on Win10 Home x64 1607 build 14393.693 Japanese edition
Flags: needinfo?(alice0775)
(In reply to Sai Shyam from comment #23) > I didn't not get any help from comment 16 link. I installed 'nightly' from a > link and checked. I think it's working. We're able to read the Telugu > script. Thanks. Please make sure this verision accessible to all. And also > check with other languages. Thanks again. Hi Sai Shyam, could you please also check that Telugu language is properly displayed on Fx 53b1? https://archive.mozilla.org/pub/firefox/candidates/53.0b1-candidates/build1/ Thanks.
Flags: needinfo?(mysticshyam)
Guys, please help me with this. I am not that techie to test or to do checks or something. I literally don't know anything. I think I got some update with the Firefox very recently, and it's not working in that version or so. Alright?! Now, please ask some native devs or testers who work/volunteer for Mozilla or hire someone if you don't have. Hope you understand the problem! I really don't know what you guys generally communicate in channels like this. I think there should be a road map for beginners at Mozilla to dig deeper into things of their interests according to their capabilities or whatsoever. Please reslove the issue ASAP. Feel free to contact/get-in-touch/communicate/network with me anytime. Thanks so much. Have a nice time. P.S: I am not a beginner in advocating/loving Mozilla. I used a different mail id for communications or to recive newsletters and so on, since many years.
(In reply to Paul Silaghi, QA [:pauly] from comment #26) > (In reply to Sai Shyam from comment #23) Hey Paul, Tested this on Fx 53b1. Everyone works perfectly. PFA. Thank you so much guys. Hope we get all those telugu localized users back with this release. :D Any thoughts on when this will be into production? I mean the timeline.
Fx53 is due to ship on 18-April, though that date is subject to change if a need to delay were to arise. There's also a possibility still that this fix to be taken in an Fx52 bugfix release sooner than that, but that's not a certainty at this point. Keep watching this bug for updates :)
Thanks Santosh.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Flags: needinfo?(mysticshyam)
Jonathan, care to request uplift to esr52 so we can fix this regression?
Flags: needinfo?(jfkthame)
Comment on attachment 8841588 [details] [diff] [review] Use Nirmala UI as fallback font for additional Indic script blocks [Approval Request Comment] If this is not a sec:{high,crit} bug, please state case for ESR consideration: This makes content in a number of major Indian languages virtually unreadable for some users (depending on installed fonts) User impact if declined: broken rendering of Indic scripts for Windows users who don't have additional language support installed Fix Landed on Version: 53 Risk to taking this patch (and alternatives if risky): minimal risk, this just adds a font to Gecko's default fallback list String or UUID changes made by this patch: none
Flags: needinfo?(jfkthame)
Attachment #8841588 - Flags: approval-mozilla-esr52?
Comment on attachment 8841588 [details] [diff] [review] Use Nirmala UI as fallback font for additional Indic script blocks Given the high impact of this bug in some regions and the low risk of the patch, I'd like to get this on the radar for possible dot release inclusion too.
Attachment #8841588 - Flags: approval-mozilla-release?
Comment on attachment 8841588 [details] [diff] [review] Use Nirmala UI as fallback font for additional Indic script blocks fix fallback font for some indic scripts, for release+esr52
Attachment #8841588 - Flags: approval-mozilla-release?
Attachment #8841588 - Flags: approval-mozilla-release+
Attachment #8841588 - Flags: approval-mozilla-esr52?
Attachment #8841588 - Flags: approval-mozilla-esr52+
(In reply to santosh from comment #29) > Any thoughts on when this will be into production? I mean the timeline. FYI, this is now included in a planned Fx 52.0.2 bugfix release due to go out later this week.
Flags: needinfo?(jsavage)
santosh, could you please verify this bug on 52.0.2 when builds [1] are available? We'd really appreciate it. [1] https://archive.mozilla.org/pub/firefox/candidates/52.0.2-candidates/build1/
Flags: needinfo?(viswanathamsantosh)
(In reply to Andrei Vaida, QA [:avaida] – please ni? me from comment #40) > santosh, could you please verify this bug on 52.0.2 when builds [1] are > available? We'd really appreciate it. Hey Andrei, Just installed it and verified it in the given build version 52.0.2. It is working completely fine. will verify once again after it goes to prod. Thanks, Santosh.
Flags: needinfo?(viswanathamsantosh)
Thanks a lot. I've got Firefox Update. Now I can read Telugu on Firefox. Let's celebrate the moment. Thanks for all your support.
Fixed in 52, I don't think we need to add it to relnotes for 53.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: