Bug 1342787 - Use Nirmala UI as fallback font for additional Indic script blocks. r=m_kato, a=lizzard